# Kisan-G

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  craco.config.js  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  start_servers.bat  start_servers.ps1  tailwind.config.js  tsconfig.json  vercel.json
Features/Auth/: Login.tsx  Signup.tsx
Features/CropDoctor/: CropDoctor.tsx
Features/Dashboard/: DashBoard.tsx
Features/LanguageSelect/: LanguageSelect.tsx
Features/MarketAnalyst/: MarketAnalyst.tsx
Features/Profile/: Profile.tsx
Features/SchemeNavigator/: SchemeNavigator.tsx
backend/: access_location.py  agentic_int.py  market_scraper.py  market_scrapper.py  scheme_data.py  speech_service.py  weather_service.py  whatsapp_api.py
backend/snippets/: prompt.py
backend/vectorstores/: gov_rag_system.py
kisanGMobile/: app.json  package.json
kisanGMobile/android/: settings.gradle
kisanGMobile/ios/: Podfile
public/: index.html  manifest.json
research/: voice.ipynb
server/: .cache.sqlite  access_location.py  agentic_int.py  app.py  database.py  kisan_app.db  market_scrapper.py  middleware.py  scheme_data.py  speech_service.py  voice.py  weather_data.db  weather_service.py  whatsapp_service.py
server/services/: __init__.py
server/snippets/: prompt.py
server/vectorstores/: gov_rag_system.py
src/: APP.css  APP.tsx  App.test.js  index.css  index.tsx
src/components/: CropCard.tsx  NavBar.tsx  Routes.tsx  UploadInput.tsx  VoiceAssistant.tsx  VoiceAssistantInput.tsx  (+2 more)
utils/: logging.py
(+53 files in other folders)
